--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@
 # platform: linux-64
 _libgcc_mutex=0.1=main
 _openmp_mutex=5.1=1_gnu
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=pyhd8ed1ab_3
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
 blas=1.0=mkl
 bottleneck=1.3.5=py37h7deecbd_0
 brotlipy=0.7.0=py37h27cfd23_1003
 bzip2=1.0.8=h7b6447c_0
-ca-certificates=2023.01.10=h06a4308_0
-certifi=2022.12.7=py37h06a4308_0
+ca-certificates=2022.12.7=ha878542_0
+certifi=2022.12.7=pyhd8ed1ab_0
 cffi=1.15.1=py37h74dc2b5_0
 charset-normalizer=2.0.4=pyhd3eb1b0_0
 cryptography=39.0.1=py37h9ce1e76_0
@@ -25,6 +28,7 @@ daal4py=2021.6.0=py37h79cecc1_1
 dal=2021.6.0=hdb19cb5_916
 dbus=1.13.18=hb2f20db_0
 decorator=4.4.2=pypi_0
+entrypoints=0.4=pyhd8ed1ab_0
 expat=2.4.9=h6a678d5_0
 ffmpeg=4.3=hf484d3e_0
 fontconfig=2.14.1=h52c9d5c_1
@@ -38,9 +42,15 @@ gstreamer=1.14.1=h5eee18b_1
 icu=58.2=he6710b0_3
 idna=3.4=py37h06a4308_0
 intel-openmp=2021.4.0=h06a4308_3561
+ipykernel=5.5.5=py37h085eea5_0
+ipython=7.33.0=py37h89c1867_0
+ipython_genutils=0.2.0=py_1
+jedi=0.18.2=pyhd8ed1ab_0
 jinja2=3.1.2=py37h06a4308_0
 joblib=1.1.1=py37h06a4308_0
 jpeg=9e=h5eee18b_1
+jupyter_client=5.3.4=py37_0
+jupyter_core=4.5.0=py_0
 kiwisolver=1.4.4=py37h6a678d5_0
 lame=3.100=h7b6447c_0
 lcms2=2.12=h3be6417_0
@@ -63,6 +73,7 @@ libidn2=2.3.2=h7f8727e_0
 libnpp=11.7.4.75=0
 libnvjpeg=11.8.0.2=0
 libpng=1.6.39=h5eee18b_0
+libsodium=1.0.18=h36c2ea0_1
 libstdcxx-ng=11.2.0=h1234567_1
 libtasn1=4.19.0=h5eee18b_0
 libtiff=4.5.0=h6a678d5_2
@@ -76,6 +87,7 @@ libxml2=2.9.14=h74e7548_0
 lz4-c=1.9.4=h6a678d5_0
 markupsafe=2.1.1=py37h7f8727e_0
 matplotlib=3.1.2=py37h4fdacc2_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
 mkl=2021.4.0=h06a4308_640
 mkl-service=2.4.0=py37h7f8727e_0
 mkl_fft=1.3.1=py37hd3c417c_0
@@ -93,23 +105,31 @@ openjpeg=2.4.0=h3ad879b_0
 openssl=1.1.1t=h7f8727e_0
 packaging=22.0=py37h06a4308_0
 pandas=1.3.5=py37h8c16a72_0
+parso=0.8.3=pyhd8ed1ab_0
 pcre=8.45=h295c915_0
+pexpect=4.8.0=pyh1a96a4e_2
+pickleshare=0.7.5=py_1003
 pillow=9.4.0=py37h6a678d5_0
 pip=22.3.1=py37h06a4308_0
+prompt-toolkit=3.0.38=pyha770c72_0
 psutil=5.9.0=py37h5eee18b_0
+ptyprocess=0.7.0=pyhd3deb0d_0
 pycparser=2.21=pyhd3eb1b0_0
 pyg=2.3.0=py37_torch_1.13.0_cu117
 pyg-lib=0.2.0+pt113cu117=pypi_0
+pygments=2.15.1=pyhd8ed1ab_0
 pyopenssl=23.0.0=py37h06a4308_0
 pyparsing=3.0.4=pyhd3eb1b0_0
 pyqt=5.9.2=py37h05f1152_2
 pysocks=1.7.1=py37_1
 python=3.7.15=haa1d7c7_0
 python-dateutil=2.8.2=pyhd3eb1b0_0
+python_abi=3.7=2_cp37m
 pytorch=1.13.1=py3.7_cuda11.7_cudnn8.5.0_0
 pytorch-cuda=11.7=h778d358_3
 pytorch-mutex=1.0=cuda
 pytz=2021.3=pyhd3eb1b0_0
+pyzmq=19.0.2=py37hac76be4_2
 qt=5.9.7=h5867ecd_1
 readline=8.2=h5eee18b_0
 requests=2.28.1=py37h06a4308_0
@@ -132,10 +152,13 @@ torchaudio=0.13.1=py37_cu117
 torchvision=0.14.1=py37_cu117
 tornado=6.2=py37h5eee18b_0
 tqdm=4.64.1=py37h06a4308_0
+traitlets=5.9.0=pyhd8ed1ab_0
 typing_extensions=4.1.1=pyh06a4308_0
 tzdata=2023c=h04d1e81_0
 urllib3=1.26.14=py37h06a4308_0
+wcwidth=0.2.6=pyhd8ed1ab_0
 wheel=0.37.1=pyhd3eb1b0_0
 xz=5.2.10=h5eee18b_1
+zeromq=4.3.4=h9c3ff4c_1
 zlib=1.2.13=h5eee18b_0
 zstd=1.5.5=hc292b87_0
