--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ Painformer
 colab_notBook.py
 test.ipynb
 landmark_extractor.ipynb
+__pycache__/dataloader.cpython-37.pyc
+__pycache__/model.cpython-37.pyc
 colab_notBook.py
+train.py
