--- a/config/mediapipe.yml
+++ b/config/mediapipe.yml
@@ -1,12 +1,12 @@
 Description: " first training using signl, whitout bathing and without shuffling, without data augmentaion.."
 name_exp: "biovid"
-data_path: "/home/falhamdoosh/tgcn/Painformer/dataset_data_biovid.npy"
-labels_path: "/home/falhamdoosh/tgcn/Painformer/dataset_label_biovid.pkl"
+data_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/dataset_mediapipe.npy"
+labels_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/label_mediapipe.npy"
 #edges_path: "/home/falhamdoosh/tgcn/data/edges_indx_dlib68.npy"
 #edges_path: "/home/falhamdoosh/tgcn/Painformer/painformer-main/biovid_dlib_51_normalized_adjacency_new.npy"
-edges_path: "/home/falhamdoosh/tgcn/Painformer/edge_index_51biovid.npy"
-idx_train: "/home/falhamdoosh/tgcn/Painformer/idx_train.npy"
-idx_test: "/home/falhamdoosh/tgcn/Painformer/idx_test.npy"
+edges_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/edges.npy"
+idx_train: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/idx_train.npy"
+idx_test: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/idx_test.npy"
 ###Optimizer###
 
 weight_decay: 0.0001
@@ -17,7 +17,7 @@ optimizer: 'Adam'
 ###Network###
 start_epoch: 0
 num_epoch: 100 
-batch_size: 128
+batch_size: 64
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: ""       #Name of folder that contains the model resume training
 gpu: 1
@@ -29,9 +29,9 @@ n_classes: 5
 num_features: 4
 output_features: 1
 TS: 137
-n_joints: 51
+n_joints: 469
 train_ratio: 0.7
-lr: 0.000001
+lr: 0.01
 LOG_DIR: "./log/"
 #n_layers: 3
 #dropout: 0.2
