--- a/config/dlib.yml
+++ b/config/dlib.yml
@@ -1,5 +1,5 @@
 Description: " first training using signl, whitout bathing and without shuffling, without data augmentaion.."
-name_exp: "biovid"
+name_exp: "dlib"
 data_path: "/home/falhamdoosh/tgcn/Painformer/dataset_data_biovid.npy"
 labels_path: "/home/falhamdoosh/tgcn/Painformer/dataset_label_biovid.pkl"
 #edges_path: "/home/falhamdoosh/tgcn/data/edges_indx_dlib68.npy"
@@ -17,21 +17,21 @@ optimizer: 'Adam'
 ###Network###
 start_epoch: 0
 num_epoch: 100 
-batch_size: 128
+batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: ""       #Name of folder that contains the model resume training
 gpu: 1
 #k_fold: 3
 ###Model parameters###
 
-embed_dim: 32
+embed_dim: 128
 n_classes: 5
 num_features: 4
 output_features: 1
 TS: 137
 n_joints: 51
 train_ratio: 0.7
-lr: 0.000001
+lr: 0.01
 LOG_DIR: "./log/"
 #n_layers: 3
 #dropout: 0.2
