--- a/config/mediapipe.yml
+++ b/config/mediapipe.yml
@@ -1,5 +1,5 @@
-Description: " first training using signl, whitout bathing and without shuffling, without data augmentaion.."
-name_exp: "biovid"
+Description: " without data augmentaion, with label normalization"
+name_exp: "mediapipe"
 data_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/dataset_mediapipe.npy"
 labels_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/label_mediapipe.npy"
 #edges_path: "/home/falhamdoosh/tgcn/data/edges_indx_dlib68.npy"
@@ -10,7 +10,7 @@ idx_test: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/idx_test.npy"
 ###Optimizer###
 
 weight_decay: 0.0001
-step_decay: 20
+step_decay: 10
 optimizer: 'Adam'
 #momentum: 0.9
 
