--- a/config/minidata.yml
+++ b/config/minidata.yml
@@ -1,12 +1,11 @@
-Description: "  whitout data augmentation, with label normalization"
+Description: " train on small data set from 20 sample"
 name_exp: "dlib"
 data_path: "/home/falhamdoosh/tgcn/Painformer/dataset_data_biovid.npy"
 labels_path: "/home/falhamdoosh/tgcn/Painformer/dataset_label_biovid.pkl"
-#edges_path: "/home/falhamdoosh/tgcn/data/edges_indx_dlib68.npy"
-#edges_path: "/home/falhamdoosh/tgcn/Painformer/painformer-main/biovid_dlib_51_normalized_adjacency_new.npy"
 edges_path: "/home/falhamdoosh/tgcn/Painformer/edge_index_51biovid.npy"
-idx_train: "/home/falhamdoosh/tgcn/Painformer/idx_train.npy"
-idx_test: "/home/falhamdoosh/tgcn/Painformer/idx_test.npy"
+
+idx_train: "/home/falhamdoosh/tgcn/data/PartA/minidata/idx_train.npy"
+idx_test: "/home/falhamdoosh/tgcn/data/PartA/minidata/idx_test.npy"
 ###Optimizer###
 
 weight_decay: 0.0001
@@ -16,8 +15,8 @@ optimizer: 'Adam'
 
 ###Network###
 
-num_epoch: 100 
-batch_size: 32
+num_epoch: 500 
+batch_size: 20
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: ""       #Name of folder that contains the model resume training
 gpu: 1
@@ -31,7 +30,7 @@ output_features: 1
 TS: 137
 n_joints: 51
 train_ratio: 0.7
-lr: 0.01
+lr: 0.001
 LOG_DIR: "./log/"
 #n_layers: 3
 #dropout: 0.2
