--- a/config/minidata.yml
+++ b/config/minidata.yml
@@ -1,13 +1,12 @@
 Description: " train on small data set from 20 sample"
-name_exp: "mediapipe"
+name_exp: "dlib"
 
-data_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/dataset_mediapipe.npy"
-labels_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/label_mediapipe.npy"
-edges_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/edges.npy"
-
-#data_path: "/home/falhamdoosh/tgcn/Painformer/dataset_data_biovid.npy"
-#labels_path: "/home/falhamdoosh/tgcn/Painformer/dataset_label_biovid.pkl"
-#edges_path: "/home/falhamdoosh/tgcn/Painformer/edge_index_51biovid.npy"
+#data_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/dataset_mediapipe_without_process.npy"
+#labels_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/label_mediapipe.npy"
+#edges_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/edges.npy"
+data_path: "/home/falhamdoosh/tgcn/data/PartA/dlib_student/dataset_data_biovid.npy"
+labels_path: "/home/falhamdoosh/tgcn/data/PartA/dlib_student/dataset_label_biovid.pkl"
+edges_path: "/home/falhamdoosh/tgcn/data/PartA/dlib_student/edge_index_51biovid.npy"
 
 idx_train: "/home/falhamdoosh/tgcn/data/PartA/minidata/idx_train.npy"
 idx_test: "/home/falhamdoosh/tgcn/data/PartA/minidata/idx_test.npy"
