facial frontal visualizing

--- a/config/minidata.yml
+++ b/config/minidata.yml
@@ -2,10 +2,10 @@ Description: " train on small data set from 20 sample"
 name_exp: "dlib"
 
 #data_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/dataset_mediapipe_without_process.npy"
-#labels_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/label_mediapipe.npy"
+labels_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/label_mediapipe.npy"
 #edges_path: "/home/falhamdoosh/tgcn/data/PartA/Mediapipe/edges.npy"
 data_path: "/home/falhamdoosh/tgcn/data/PartA/dlib_student/dataset_data_biovid.npy"
-labels_path: "/home/falhamdoosh/tgcn/data/PartA/dlib_student/dataset_label_biovid.pkl"
+#labels_path: "/home/falhamdoosh/tgcn/data/PartA/dlib_student/dataset_label_biovid.pkl"
 edges_path: "/home/falhamdoosh/tgcn/data/PartA/dlib_student/edge_index_51biovid.npy"
 video_path: "/home/falhamdoosh/tgcn/data/PartA/"
 csv_file: "/home/falhamdoosh/tgcn/data/PartA/samples.csv"
