--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -1,6 +1,6 @@
-Description: "expirment with 2 adj matrix,3 blocks,stride=3 and just 4
- features:x,y,vx,vy,adabtive false, using A3GCN instead of GRU, with batch normaliz"
-name_exp: "dlib"
+Description: "expirment with 2 adj matrix,3 blocks,stride=3 and 4 features,
+adabtive false, 128 la dim of embedding. preprocessd data"
+name_exp : "dlib"
 
 parent_folder: "/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/"
 video_path: "data/PartA/"
@@ -11,28 +11,28 @@ labels_path: "data/PartA/lables.npy"
 
 data_path: "data/PartA/openFace/dataset_openFace.npy"
 edges_path: "data/PartA/openFace/edge_openFace.npy"
-idx_train: "data/PartA/idx_train_filterd_low_react.npy"
-idx_test: "data/PartA/idx_test_filterd_low_react.npy"
+idx_train: "data/PartA/idx_train_filterd.npy"
+idx_test: "data/PartA/idx_test_filterd.npy"
 
 filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
 
 ###Optimizer###
-weight_decay: 0.5
+weight_decay: 0.7
 step_decay: 30
 optimizer: 'SGD'
 
 ###Network###
-num_epoch: 200 
+num_epoch: 500 
 batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18"       #Name of folder that contains the model resume training
-gpu: 1
+gpu: 0
 
 
 ###Model parameters###
 model_name: "aagcn" #"a3tgcn" #  #a3tgcn
-embed_dim: 256
+embed_dim: 128
 num_subset: 2
 num_features: 4
 output_features: 1
