--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -1,5 +1,6 @@
 Description: "expirment with 2 adj matrix,3 blocks,stride=3 and 4 features,
-adabtive false, 128 la dim of embedding. preprocessd data"
+adabtive false, 128 la dim of embedding. 
+preprocessd data, with centroid,frobinus just for x,y, without divide by std"
 name_exp : "dlib"
 
 parent_folder: "/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/"
@@ -9,10 +10,10 @@ csv_file: "data/PartA/samples.csv"
 
 labels_path: "data/PartA/lables.npy"
 
-data_path: "data/PartA/openFace/dataset_openFace.npy"
+data_path: "data/PartA/openFace/dataset_openFace_centroid.npy"
 edges_path: "data/PartA/openFace/edge_openFace.npy"
-idx_train: "data/PartA/idx_train_filterd.npy"
-idx_test: "data/PartA/idx_test_filterd.npy"
+idx_train: "data/PartA/idx_train_filterd_low_react.npy"
+idx_test: "data/PartA/idx_test_filterd_low_react.npy"
 
 filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
@@ -37,7 +38,7 @@ num_subset: 2
 num_features: 4
 output_features: 1
 TS: 137
-n_joints: 51
+n_joints: 52
 adaptive: False
 lr: 0.01
 LOG_DIR: "log/"
