--- a/config/mediapipe.yml
+++ b/config/mediapipe.yml
@@ -13,13 +13,13 @@ filter_idx_90: "/home/falhamdoosh/tgcn/data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "/home/falhamdoosh/tgcn/data/PartA/idx_low_confidance_80.npy"
 data_shape: (8700,486,4,137)
 ###Optimizer###
-weight_decay: 0.0001
-step_decay: 10
-optimizer: 'Adam'
+weight_decay: 0.7
+step_decay: 30
+optimizer: 'SGD'
 
 ###Network###
-num_epoch: 100 
-batch_size: 16
+num_epoch: 500 
+batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: ""       #Name of folder that contains the model to resume training
 gpu: 1
@@ -31,8 +31,7 @@ num_features: 4
 output_features: 1
 TS: 137
 n_joints: 469
-train_ratio: 0.7
-lr: 0.001
+
+lr: 0.01
 LOG_DIR: "./log/"
-#n_layers: 3
-#dropout: 0.2
+
