--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -1,7 +1,6 @@
-Description: "expirment with 2 adj matrix,3 blocks,stride=3 and 4 features,
-adabtive false, 128 la dim of embedding. 
-preprocessd data,
-new split which contain all subjects"
+Description: "expirment with 2 adj matrix,3 blocks,stride=3 and 6features x,y,vx,vy,cvx,cvy,
+adabtive false, 
+"
 
 name_exp : "dlib"
 
@@ -11,8 +10,11 @@ landmarks_path : "data/PartA/3dlandmarks/"
 csv_file: "data/PartA/samples.csv"
 labels_path: "data/PartA/lables.npy"
 
-data_path: "data/PartA/openFace/dataset_openFace.npy" 
-idx_train: "data/PartA/idx_train_filterd.npy"
+data_path: "data/PartA/openFace/dataset_openFace_new.npy" 
+idx_train: "data/PartA/idx_train_filterd.npy" 
+#idx_train_all_subject
+#idx_train_filterd_low_react
+#idx_train_filterd
 idx_test: "data/PartA/idx_test_filterd.npy"
 
 edges_path: "data/PartA/openFace/edge_openFace.npy"
@@ -20,23 +22,26 @@ filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
 
 ###Optimizer###
-weight_decay: 0.8
+weight_decay: 0.7
 step_decay: 30
 optimizer: 'SGD'
 
 ###Network###
 num_epoch: 500 
-batch_size: 32
+batch_size: 64
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18"       #Name of folder that contains the model resume training
-gpu: 0
+gpu: 1
 
 ###Model parameters###
 model_name: "aagcn" #"a3tgcn" #
 embed_dim: 128
 num_subset: 2
-num_features: 4
-output_features: 1
+num_features: 6
+t_kernel_size: 9
+hidden_size: 1
+bn: False
+
 TS: 137
 n_joints: 51
 adaptive: False
