--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -26,26 +26,28 @@ optimizer: 'SGD'
 
 ###Network###
 num_epoch: 500 
-batch_size: 64
+batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18"       #Name of folder that contains the model resume training
-gpu: 0
+gpu: 1
 
 ###Model parameters###
 model_name: "aagcn" # "a3tgcn" # # #
 embed_dim: 128
 num_subset: 2
 num_features: 6
-t_kernel_size: 7
+t_kernel_size: 15
 hidden_size: 1
 gru: 2
 augmentaion: True
 
 bn: True
-strid: 3
+strid: 1
 TS: 137
 n_joints: 51
 adaptive: False
 lr: 0.01
 LOG_DIR: "log/"
 class_3: False
+Prop: 0.01 #usando la classe di augmentation.
+Temporal_downsampling: False
