--- a/config/open_face_all_sub.yml
+++ b/config/open_face_all_sub.yml
@@ -10,9 +10,8 @@ labels_path: "data/PartA/lables.npy"
 
 data_path: "data/PartA/openFace/dataset_openFace_new.npy" 
 idx_train: "data/PartA/idx_train_all_subject.npy" 
+#idx_train_all_subject_no_filter
 #idx_train_all_subject
-#idx_train_filterd_low_react
-#idx_train_filterd
 idx_test: "data/PartA/idx_test_all_subject.npy"
 
 edges_path: "data/PartA/openFace/edge_openFace.npy"
@@ -26,25 +25,27 @@ optimizer: 'SGD'
 
 ###Network###
 num_epoch: 500 
-batch_size: 64
+batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18"       #Name of folder that contains the model resume training
-gpu: 0
+gpu: 1
 
 ###Model parameters###
 model_name: "aagcn" #"a3tgcn" #
 embed_dim: 128
 num_subset: 2
 num_features: 6
-t_kernel_size: 7
+t_kernel_size: 15
 hidden_size: 1
 gru: 2
 
+augmentaion: False
 bn: True
-strid: 3
+strid: 1
 TS: 137
 n_joints: 51
-adaptive: False
+adaptive: True
 lr: 0.01
 LOG_DIR: "log/"
-class_3: False
+num_classes: False
+binary_class: True
