--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -29,7 +29,7 @@ num_epoch: 500
 batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18"       #Name of folder that contains the model resume training
-gpu: 0
+gpu: 1
 
 ###Model parameters###
 model_name: "aagcn" # "a3tgcn" # # #
@@ -39,15 +39,14 @@ num_features: 6
 t_kernel_size: 15
 hidden_size: 1
 gru: 2
-augmentaion: False
-
+augmentaion: True
 bn: True
 strid: 1
 TS: 137
 n_joints: 51
-adaptive: True
+adaptive: False
 lr: 0.01
 LOG_DIR: "log/"
-num_classes: 5
-Prop: 0.01 #usando la classe di augmentation.
+num_classes: 2
+prop: 0.01 #usando la classe di augmentation.
 Temporal_downsampling: False
