--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -1,52 +1,51 @@
 Description: ""
-
 name_exp : "dlib"
-
 parent_folder: "/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/"
 video_path: "data/PartA/"
 landmarks_path : "data/PartA/3dlandmarks/"
 csv_file: "data/PartA/samples.csv"
 labels_path: "data/PartA/lables.npy"
-
 data_path: "data/PartA/openFace/dataset_openFace_new.npy" 
 idx_train: "data/PartA/idx_train_filterd_low_react.npy" 
 #idx_train_all_subject
 #idx_train_filterd_low_react
 #idx_train_filterd
 idx_test: "data/PartA/idx_test_filterd_low_react.npy"
-
 edges_path: "data/PartA/openFace/edge_openFace.npy"
 filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
-
-###Optimizer###
+LOG_DIR: "log/"
 weight_decay: 0.7
 step_decay: 30
 optimizer: 'SGD'
-
-###Network###
 num_epoch: 500 
 batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
 pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18"       #Name of folder that contains the model resume training
-gpu: 1
-
-###Model parameters###
+Temporal_downsampling: False
 model_name: "aagcn" # "a3tgcn" # # #
 embed_dim: 128
+gru: 2
+bn: True
+lr: 0.01
+
 num_subset: 2
 num_features: 6
-t_kernel_size: 15
+
 hidden_size: 1
-gru: 2
-augmentaion: True
-bn: True
+
+adaptive: False
+attention: False
+num_classes: 2
+
+t_kernel_size: 15
 strid: 1
 TS: 137
 n_joints: 51
-adaptive: False
-lr: 0.01
-LOG_DIR: "log/"
-num_classes: 2
-prop: 0.01 #usando la classe di augmentation.
-Temporal_downsampling: False
+
+augmentaion: False
+prop: #0.2 #usando la classe di augmentation.
+Aug_type: #"r" # [ "r" , "f" , "r+f"]
+
+log_name: "1s+15k+binary+witout_attention"
+gpu: 1
