--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -35,24 +35,22 @@ num_features: 6
 hidden_size: 1
 TS: 137
 n_joints: 51
-
 idx_train:  "data/PartA/idx_train_filterd_low_react.npy"
 idx_test: "data/PartA/idx_test_filterd_low_react.npy" 
 LOG_DIR: "log/"
 
+
 adaptive: False
 attention: True
 drop_out: 0.2
-
-type_exp: "loso" #, "hold_out" 
+protocol: "hold_out" #, "hold_out" 
 t_kernel_size: 15
 strid: 1
 augmentaion: True # True
 prop: 1 # 1 #usando la classe di augmentation.
 Aug_type: "r+f" #"f" # [ "r" , "f" , "r+f"]
 concatenate: True
-log_name: "Concatenate_aug" #"1s+15k+multi+loso-filtred_LE_test0"
-
-gpu: 1
+log_name: "Concatenate_aug_multi" #"1s+15k+multi+loso-filtred_LE_test0"
+gpu: 0
 num_classes: 5
-num_epoch: 150 
+num_epoch: 250 
