--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -44,33 +44,16 @@ normalize_labels: False
 
 adaptive: False
 attention: True
-drop_out: 0.2
+drop_out: 0.5
 protocol: "hold_out" #"hold_out" #"loso"  
-maxMinNormalization: True #True
+maxMinNormalization: True #False #True
+max_output: False
 
-augmentaion: False #False #  # True
-prop:  #1 # 1 #usando la classe di augmentation.
-Aug_type: #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"]
-concatenate: False #True #False # # True
-log_name: "1s+15k+multi+minMaxNorm_dx_dy_NoLabelNorm" #"1s+15k+multi+loso-filtred_LE_test0"
+augmentaion: False #True #False #  # True
+prop: #1 # 1 #usando la classe di augmentation.
+Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"]
+concatenate: False # True #True #True # # # True
+log_name: "1s+15k+multi+MinMaxNorm_xy+NoLabelNorm+centralFrame" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
 gpu: 1
 num_classes: 5
-num_epoch: 500 
-
-#todo 3s+7k + augmentaion. due tipi. binary and multi. 
-
-#loso multi con augmentaion.
-
-#complicare la struttura con augmentaion.
-#binary without decay. 1
-#mean 
-#try generate the augmented data in the init. 
-#Plot histogram of aumented dataset
-#Calcolare la velocità dopo il min_max?
-
-#provare minmax for all dataset, provare a calcolare la velocità dopo 
-#provare con una k.
-#augment the whole dataset
-#minmax in binary classification.
-
-#fare loss senza normalization. 
+num_epoch: 100 
