--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -1,4 +1,4 @@
-Description: "With complex architect+FC to reduce embeding sizes"
+description: "With complex architect+FC to reduce embeding sizes"
 name_exp : "dlib"
 parent_folder: "/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/"
 video_path: "data/PartA/"
@@ -18,8 +18,10 @@ filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
 # "data/PartA/idx_test_filterd_low_react.npy"
 
 weight_decay: 0.7
+momentum: 0.9
 step_decay: 30
-optimizer: 'SGD'
+L2: 0.0001
+optimizer_name: 'SGD'
 
 batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
@@ -30,6 +32,7 @@ embed_dim: 128
 gru: 2
 bn: True
 lr: 0.01
+
 num_subset: 2
 num_features: 6
 hidden_size: 1
@@ -44,16 +47,18 @@ normalize_labels: False
 
 adaptive: False
 attention: True
-drop_out: 0.5
+drop_out: 0.2
 protocol: "hold_out" #"hold_out" #"loso"  
 maxMinNormalization: True #False #True
 max_output: False
 
 augmentaion: False #True #False #  # True
 prop: #1 # 1 #usando la classe di augmentation.
-Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"]
+Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
-log_name: "1s+15k+multi+MinMaxNorm_xy+NoLabelNorm+centralFrame" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
+project_name: "pain_estimation"
+log_name: "test_after_refactory_multi" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
 gpu: 1
 num_classes: 5
-num_epoch: 100 
+num_epoch: 3
+
