--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -48,16 +48,18 @@ normalize_labels: False
 adaptive: False
 attention: True
 drop_out: 0.2
-protocol: "hold_out" #"hold_out" #"loso"  
+protocol: "loso" #"hold_out" #"loso"  
 maxMinNormalization: True #False #True
 
-center_loss: True
+center_loss: False
 augmentaion: False #True #False #  # True
 prop: #1 # 1 #usando la classe di augmentation.
 Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation"
-log_name: "hold_out_binary_last7_center_loss_lambda01" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
-gpu: 0
-num_classes: 2
-num_epoch: 80
+log_name: "hold_out_multi_last" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
+gpu: 1
+num_classes: 5
+num_epoch: 70
+
+eval_loso: True
