--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -48,7 +48,7 @@ normalize_labels: False
 adaptive: False
 attention: True
 drop_out: 0.2
-protocol: "loso" #"hold_out" #"loso"  
+protocol: "hold_out" #"hold_out" #"loso"  
 maxMinNormalization: True #False #True
 
 center_loss: False
@@ -58,8 +58,8 @@ Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"]
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation"
 log_name: "hold_out_multi_last" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
-gpu: 1
+gpu: 0
 num_classes: 5
 num_epoch: 70
 
-eval_loso: True
+eval_loso: False
