--- a/config/open_face_PartB.yml
+++ b/config/open_face_PartB.yml
@@ -1,22 +1,28 @@
-description: "With complex architect+FC to reduce embeding sizes"
-name_exp : "dlib"
-parent_folder: "/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/"
-folder_data_path: "data/PartA/"
-video_path: "data/PartA/video"
-landmarks_path : "data/PartA/3dlandmarks/"
-landmarks_npy: "data/PartA/landmarksnpy/"
-csv_file: "data/PartA/samples.csv"
-labels_path: "data/PartA/lables.npy"
-data_path: "data/PartA/openFace/dataset_openFace_new.npy" 
-edges_path: "data/PartA/openFace/edge_openFace.npy"
-filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
-filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
 
-# "data/PartA/idx_train_filterd_low_react.npy" 
+
+description: ""
+name_exp : "dlib"
+parent_folder: "/Users/fatemahalhamdoosh/Desktop/Git/PAIN_ESTIMATION/"
+folder_data_path: "data/PartB/"
+video_path: "data/PartB/video/"
+landmarks_path : "data/PartB/3dlandmarks/"
+landmarks_npy: "data/PartB/landmarksnpy/"
+csv_file: "data/PartB/samples.csv"
+labels_path: "data/PartB/lables.npy"
+data_path: "data/PartB/openFace/dataset_openFace_new.npy" 
+
+
+
+
+edges_path: "data/PartB/openFace/edge_openFace.npy"
+filter_idx_90: "data/PartB/idx_low_confidance_90.npy"
+filter_idx_80: "data/PartB/idx_low_confidance_80.npy"
+
+# "data/PartB/idx_train_filterd_low_react.npy" 
 #idx_train_all_subject
 #idx_train_filterd_low_react
 #idx_train_filterd
-# "data/PartA/idx_test_filterd_low_react.npy"
+# "data/PartB/idx_test_filterd_low_react.npy"
 
 weight_decay: 0.7
 momentum: 0.9
@@ -35,12 +41,12 @@ bn: True
 lr: 0.01
 
 num_subset: 2
-num_features: 6
+num_features: 4
 hidden_size: 1
 TS: 137
 n_joints: 51
-idx_train:  "data/PartA/idx_train_filterd_low_react.npy" #  #"data/PartA/idx_train_filterd.npy"
-idx_test:  "data/PartA/idx_test_filterd_low_react.npy" # #"data/PartA/idx_test_filterd.npy"
+idx_train:  "data/PartB/idx_train_filterd_low_react.npy" #  #"data/PartB/idx_train_filterd.npy"
+idx_test:  "data/PartB/idx_test_filterd_low_react.npy" # #"data/PartB/idx_test_filterd.npy"
 LOG_DIR: "log/"
 t_kernel_size: 15
 strid: 1
@@ -58,9 +64,9 @@ prop: #1 # 1 #usando la classe di augmentation.
 Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation"
-log_name: "hold_out_binary_FC_NOGRU" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
+log_name: "hold_out_multi_4Features" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
 gpu: 0
-num_classes: 2
+num_classes: 5
 num_epoch: 100
 
 eval_loso: False
