--- a/config/open_face_downsample.yml
+++ b/config/open_face_downsample.yml
@@ -1,50 +1,68 @@
-Description: ""
-
+description: ""
 name_exp : "dlib"
-
+dataset : "PartA"
 parent_folder: "/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/"
-video_path: "data/PartA/"
+folder_data_path: "data/PartA/"
+video_path: "data/PartA/video"
 landmarks_path : "data/PartA/3dlandmarks/"
+landmarks_npy: "data/PartA/landmarksnpy/"
 csv_file: "data/PartA/samples.csv"
 labels_path: "data/PartA/lables.npy"
-
-data_path: "data/PartA/openFace/dataset_openFace_down_sample.npy" 
-idx_train: "data/PartA/idx_train_filterd.npy" 
-#idx_train_all_subject
-#idx_train_filterd_low_react
-#idx_train_filterd
-idx_test: "data/PartA/idx_test_filterd.npy"
-
-edges_path: "data/PartA/down_sample_edges.npy"
+data_path: "data/PartA/processed_data/dataset_openFace.npy" 
+edges_path: "data/PartA/edges.npy"
 filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
 
-###Optimizer###
+# "data/PartA/idx_train_filterd_low_react.npy" 
+#idx_train_all_subject
+#idx_train_filterd_low_react
+#idx_train_filterd
+# "data/PartA/idx_test_filterd_low_react.npy"
+
 weight_decay: 0.7
+momentum: 0.9
 step_decay: 30
-optimizer: 'SGD'
+L2: 0.0001
+optimizer_name: 'SGD'
 
-###Network###
-num_epoch: 500 
-batch_size: 64
+batch_size: 32
 continue_training: False   #If set True will continue training from pretrained model
-pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18"       #Name of folder that contains the model resume training
-gpu: 1
-
-###Model parameters###
+pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18" #Name of folder that contains the model resume training
+Temporal_downsampling: False
 model_name: "aagcn" # "a3tgcn" # # #
 embed_dim: 128
+gru: 2
+bn: True
+lr: 0.01
+
 num_subset: 2
 num_features: 6
-t_kernel_size: 7
 hidden_size: 1
-gru: 2
-augmentaion: False
-bn: True
-strid: 3
+N_sample: 8700
 TS: 137
-n_joints: 22
-adaptive: False
-lr: 0.01
-LOG_DIR: "log/"
-num_classes: False
+n_joints: 51
+idx_train:  "data/PartA/idx_train_filterd_low_react.npy" #  #"data/PartA/idx_train_filterd.npy"
+idx_test:  "data/PartA/idx_test_filterd_low_react.npy" # #"data/PartA/idx_test_filterd.npy"
+LOG_DIR: "log/PartA"
+t_kernel_size: 15
+strid: 1
+normalize_labels: False
+
+adaptive: True
+attention: True
+drop_out: 0.2
+protocol: "hold_out" #"hold_out" #"loso"  
+maxMinNormalization: True #False #True
+
+center_loss: False
+augmentaion: False #True #False #  # True
+prop: #1 # 1 #usando la classe di augmentation.
+Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
+concatenate: False # True #True #True # # # True
+project_name: "pain_estimation"
+log_name: "hold_out_multi_symmetric_adaptive" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
+gpu: 1
+num_classes: 5
+num_epoch: 100
+
+eval_loso: False
